--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,10 @@
 [theme]
-primaryColor = "#4cc3ff"
-backgroundColor = "#0b1f3a"
-secondaryBackgroundColor = "#122a4e"
-textColor = "#ffffff"
+base = "dark"                           # lock dark mode
+primaryColor = "#ff5a5a"                # red buttons
+backgroundColor = "#0b1f3a"             # navy
+secondaryBackgroundColor = "#122a4e"    # darker navy for panels
+textColor = "#ffffff"                   # white text
 font = "sans serif"
+
+[browser]
+gatherUsageStats = false
